[package]
name = "yral-video-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"]}
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version="0.8.6", features=["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version="1.45.1", features = ["full"]}
uuid = { version ="1.17.0", features = ["v4", "serde"]}
validator = { version="0.20.0", features = ["derive"] }
